<resources>
    <string name="app_name">Computer Science Study Guide</string>
    <string name="app_name_5">Computer Science Study Guide</string>
    <string name="prompt_email">Brookdale Email</string>
    <string name="register_button">Click Here To Register</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_home_screen">MainHomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="facebook_app_id">240438989693454</string>
    <string name="fb_login_protocol_scheme">fb240438989693454</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="app1_name">Firebase Cloud Messaging</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="app_name2">Sign-In Quickstart</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="server_client_id">616707699367-soapc1oeelufi1e9tuultnu5at9k0q6j.apps.googleusercontent.com</string>
    <string name="adMob_App_ID">ca-app-pub-2106373836011104~1696193472</string>
    <string name="banner_ad_unit_id">ca-app-pub-2106373836011104/4649659872</string>
    <string name="settings_native_ad">ca-app-pub-2106373836011104/9079859474</string>
    <string name="java_main_ad">ca-app-pub-2106373836011104/1805441478</string>
    <string name="java_main_ad_2">ca-app-pub-2106373836011104/5398036279</string>
    <string name="java_banner_ad">ca-app-pub-2106373836011104/6536692276</string>
    <string name="note_viewer_ad">ca-app-pub-2106373836011104/4979233871</string>
    <string name="note_viewer_ad_2">ca-app-pub-2106373836011104/4205347870</string>
    <string name="sql_ad_1">ca-app-pub-2106373836011104/4560431478</string>
    <string name="assembly_ad_1">ca-app-pub-2106373836011104/7734223874</string>
    <string name="assembly_ad_2">ca-app-pub-2106373836011104/7594623079</string>
    <string name="c_main_ad">ca-app-pub-2106373836011104/1729559472</string>
    <string-array name="java_classes">
        <item>PICK YOUR CLASS</item>
        <item>COMP-171: Programming I</item>
        <item>COMP-228: Data Structures</item>
        <item>COMP-271: Programming II</item>
    </string-array>
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="about_us">This app was created by Evan and his company\n\n<h2>ECMEDIAGROUP</h2>\n\nIt originally started out as a project for class when he was attending
    Brookdale Community College and then continually progressed over the course of a year and a half.<p> \n\nThe goal of this app is to have a centralized hub of information
    to help you study quickly for a test or if you need information right at your fingertips. </p>This is only the first version of the app, the next version
    we intended on implementing many more features such as real time messaging where you can have a group chat with other users who might be in your class
    or whatever the case may be. This will be introduced in the next update.<p> \n\nMore information about Evan can be found in the link below.</p></string>
    <string name="title_activity_welcome">FriendlyPix</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_screen_text">Welcome to FriendlyPix</string>
    <string name="explore_button_text">explore</string>
    <string name="sign_in_button_text">sign in</string>
    <string name="sign_out_button_text">sign out</string>
    <string name="show_feed_button_text">show feed</string>
    <string name="drawer_profile_title">Profile</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_your_feed_title">Your Feed</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="invite_friends_button_text">Invite your friends</string>
    <string name="my_posts_button_text">My posts</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="follow_user_error">Unable to follow user.</string>
    <string name="picture_chooser_title">Select or take picture to post</string>
    <string name="new_comment_hint">Enter new comment</string>
    <string name="new_post_location_placeholder">Getting location...</string>
    <string name="user_info_no_name">Unknown user</string>
    <string name="error_required_field">Required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_upload_task_create">Couldn\'t create upload task.</string>
    <string name="default_progress_message">Please wait...</string>
    <string name="profile_progress_message">Signing in...</string>
    <string name="post_upload_progress_message">Uploading...</string>
    <string name="user_logged_out_error">You must be logged in to do that.</string>
    <string name="error_user_not_signed_in">Error user not signed in.</string>
    <string name="alert_dialog_two_buttons_title">Do you really want to delete this note?</string>
    <string name="alert_dialog_ok">YES</string>
    <string name="alert_dialog_cancel">NO</string>
    <string name="alert_dialog_two_buttons_event_title">Do you really want to delete this event?</string>
    <string name="alert_dialog_two_buttons_event">Do you really want to add this event?</string>
    <string name="alert_dialog_edit">Edit event</string>
    <string name="action_deep_link">
        com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
    </string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is terrific for studying, give it a try!</string>
    <string name="invitation_deep_link">https://eubk9.app.goo.gl/eNh4</string>
    <string name="login">Choose a username:</string>
    <string name="username">Username</string>
    <string name="login_submit">Join the Chat!</string>
</resources>