<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.evan.comp296.group_chat.LoginActivity_for_chat">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_chat_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
    </android.support.v7.widget.Toolbar>


    <TextView
        android:text="@string/login"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="@color/blue_grey_700"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="30sp"
        android:textColor="#333"
        android:gravity="center"
        android:id="@+id/login_username"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="GroupChat Ver. 1.0"
        android:textSize="19sp"
        android:textColor="#333"
        android:gravity="center"
        android:layout_below="@+id/login_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/login_submit"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:background="@color/blue_700"
        android:layout_above="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"
        android:onClick="joinChat"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/pow_by_pubnub"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />
</RelativeLayout>
