<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.ecmediagroup.evan.studyguide.MainActivity">


    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->



    <!-- Login progress -->


    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:background="@mipmap/switzerland">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:theme="@style/Base.Widget.AppCompat.ActionBar.Solid"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite">


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_test"
                    android:layout_marginStart="@dimen/activity_test"
                    android:layout_marginTop="@dimen/activity_test"

                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="50px"
                    android:singleLine="true"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textColorLink="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:hint="@string/prompt_password"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:imeActionId="@+id/password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginLeft="@dimen/activity_test"
                    android:layout_marginStart="@dimen/activity_test"
                    android:paddingTop="40px"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="Welcome to the CS Study Guide"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:fontFamily="@string/action_sign_in"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <Button
                android:id="@+id/register_button"
                android:onClick="main_register"
                android:text="Register"
                android:background="#90A4AE"
                android:textColor="@color/Black"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="?android:textAppearanceSmall"
                android:textStyle="bold" />

            <Button
                android:id="@+id/email_sign_in_button"
                android:onClick="main_login"
                style="?android:textAppearanceSmall"
                android:background="#90A4AE"
                android:textColor="@color/colorRed"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />



            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="10dp" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>
